# knowtie

./: .gitignore  LICENSE  README.md  cabal.project  fourmolu.yaml  knowtie.cfg  typst.toml
src/: main.typ
src/internal/: alias.typ  export.typ  module.typ  term.typ
tests/alias/: ref.typ  test.typ
tests/export/: example.typ  index.yaml  ref.typ  test.typ
tests/main/: ref.typ  test.typ
tests/module/: bibliography.bib  ref.typ  test.typ
tests/term/: ref.typ  test.typ
tool/: CHANGELOG.md  LICENSE  knowtie.cabal  notie.cabal
tool/src/: Main.hs
