cabal-version: 3.0
name: knowtie
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Anthony Vandikas
maintainer: yellpika@gmail.com
copyright: © 2026 Anthony Vandikas
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

executable knowtie
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-I0 -qg"
    -Wall

  main-is: Main.hs
  default-extensions: UnicodeSyntax
  build-depends:
    aeson,
    base,
    containers,
    shake,
    unordered-containers,

  hs-source-dirs: src
  default-language: GHC2021
