cabal-version: 3.0
name: notie
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Anthony Vandikas
maintainer: yellpika@gmail.com
copyright: © 2026 Anthony Vandikas
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

executable notie
  import: warnings
  main-is: Main.hs
  default-extensions: UnicodeSyntax
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base,
    containers,
    shake,

  hs-source-dirs: src
  default-language: GHC2024
